# subset-font

./: .cz.toml  .gitignore  README.md  banner.txt  index.html  logging.yaml  pyproject.toml  subset.txt
.github/workflows/: publish-page.yaml
licenses/: MiSans.txt
static/: data.js
subset-font/: __init__.py  __main__.py  args.py  font.py  log.py  preview.html  preview.py  readme.py  util.py
subset-font/preview/: index.html
subset-font/preview/static/: data.js
